<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>aad-java-image-function</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <dependencies>
        <dependency>
            <groupId>com.microsoft.azure.functions</groupId>
            <artifactId>azure-functions-java-library</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.microsoft.azure</groupId>
                <artifactId>azure-functions-maven-plugin</artifactId>
                <version>1.18.0</version>
                <configuration>
                    <resourceGroup>${AZURE_RG}</resourceGroup>
                    <appName>${AZURE_FN_APP}</appName>
                    <region>westeurope</region>

                    <appServicePlanName>${AZURE_FN_APP}D</appServicePlanName>
                    <appServicePlanResourceGroup>${AZURE_RG}</appServicePlanResourceGroup>
                    <pricingTier>B1</pricingTier>

                    <runtime>
                        <os>windows</os>
                        <javaVersion>17</javaVersion>
                    </runtime>
                    <appSettings>
                        <property>
                            <name>FUNCTIONS_WORKER_RUNTIME</name>
                            <value>java</value>
                        </property>
                        <property>
                            <name>AZURE_OPENAI_ENDPOINT</name>
                            <value>https://your-service.cognitiveservices.azure.com</value>
                        </property>
                        <property>
                            <name>AZURE_OPENAI_KEY</name>
                            <value>fake-openai-key</value>
                        </property>
                        <property>
                            <name>AZURE_OPENAI_DALLE_DEPLOYMENT</name>
                            <value>your-model-name</value>
                        </property>
                        <property>
                            <name>API_VERSION</name>
                            <value>2024-02-01</value>
                        </property>
                    </appSettings>
                </configuration>
                <executions>
                    <execution>
                        <id>package-functions</id>
                        <goals>
                            <goal>package</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>